--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: fashion-messaging-app-ui/package-lock.json
       - name: Install dependencies
         run: npm install
         working-directory: ./fashion-messaging-app-ui
